# norsic_PAS

./: README.md
install/: local_setup.sh  setup.sh
install/fanuc_m710ic_support/lib/fanuc_m710ic_support/: forward_position_publisher.py
install/fanuc_m710ic_support/share/fanuc_m710ic_support/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fanuc_resources/share/fanuc_resources/: local_setup.sh  package.sh
install/robot_visualize/share/robot_visualize/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
pas/zadatak2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pas/zadatak2/log/: latest_build
pas/zadatak2/src/zadatak2/: CMakeLists.txt  D_STAR_USAGE.md  setup.cfg  setup.py  (+2 more)
projektiranje-autonomnih-sustava/student-assignment-02/: README.md
projektiranje-autonomnih-sustava/student-assignment-02/install/: local_setup.sh  setup.sh
projektiranje-autonomnih-sustava/student-assignment-02/log/: latest_build
projektiranje-autonomnih-sustava/student-assignment-02/src/student_assignment_02/: CMakeLists.txt  D_STAR_USAGE.md  FIX_NAVIGATION_COMPLETE.md  NAVIGATION_COMPLETE_GUIDE.md  NAVIGATION_NAV2_GUIDE.md  package.xml  setup.cfg  setup.py
projektiranje-autonomnih-sustava/student-assignment-02/src/student_assignment_02/launch/: d_star_path_planner.py  localization_complete_launch.py  navigation_complete.launch.py
projektiranje-autonomnih-sustava/student-assignment-02/src/student_assignment_02/mapped_maps/map_01/: map_01.pgm  map_01.yaml
projektiranje-autonomnih-sustava/student-assignment-02/src/student_assignment_02/resource/: student_assignment_02
projektiranje-autonomnih-sustava/student-assignment-02/src/student_assignment_02/student_assignment_02/: d_star_path_planner.py  goal_navigation_node.py  nav2_adapter.py  navigation_complete_nav2.launch.py  path_planning_node.py
projektiranje-autonomnih-sustava/zadatak2/install/: setup.sh
projektiranje-autonomnih-sustava/zadatak2/log/: latest_build
src/fanuc_m710ic_support/: CMakeLists.txt
src/fanuc_m710ic_support/test/: test_trajectory.py
src/fanuc_m710ic_support/urdf/: m710ic50_ros2_control.xacro
src/fanuc_resources/: CMakeLists.txt
src/robot_visualize/: CMakeLists.txt  package.xml
zadatak2/: test124.txt
(+85 files in other folders)
